crates/rtd-indexer-alt-e2e-tests/tests/graphql_subscription/snapshots/graphql_subscription__event_subscription__event_subscription.snap
---
source: crates/rtd-indexer-alt-e2e-tests/tests/graphql_subscription/event_subscription.rs
expression: item
---
{
  "data": {
    "events": {
      "node": {
        "sender": {
          "address": "[address]"
        },
        "transaction": {
          "digest": "[digest]"
        },
        "contents": {
          "type": {
            "repr": "[pkg]::emit_test_event::TestEvent"
          },
          "json": {
            "value": "1"
          }
        },
        "sequenceNumber": "[seq]",
        "timestamp": "[timestamp]"
      }
    }
  }
}
