crates/rtd-indexer-alt-e2e-tests/tests/graphql_subscription/snapshots/graphql_subscription__event_subscription__event_subscription_module_filter.snap
---
source: crates/rtd-indexer-alt-e2e-tests/tests/graphql_subscription/event_subscription.rs
expression: item
---
{
  "data": {
    "events": {
      "node": {
        "contents": {
          "type": {
            "repr": "[pkg]::emit_test_event::TestEvent"
          }
        }
      }
    }
  }
}
