crates/rtd-indexer-alt-e2e-tests/tests/graphql_subscription/snapshots/graphql_subscription__event_subscription__event_subscription_object_changes.snap
---
source: crates/rtd-indexer-alt-e2e-tests/tests/graphql_subscription/event_subscription.rs
expression: item
---
{
  "data": {
    "events": {
      "node": {
        "transaction": {
          "effects": {
            "status": "SUCCESS",
            "objectChanges": {
              "nodes": [
                {
                  "outputState": {
                    "address": "[address]",
                    "version": "[version]",
                    "digest": "[digest]",
                    "asMoveObject": {
                      "contents": {
                        "type": {
                          "repr": "[pkg]::coin::Coin<0x0000000000000000000000000000000000000000000000000000000000000002::rtd::RTD>"
                        }
                      }
                    }
                  }
                },
                {
                  "outputState": {
                    "address": "[address]",
                    "version": "[version]",
                    "digest": "[digest]",
                    "asMoveObject": {
                      "contents": {
                        "type": {
                          "repr": "[pkg]::emit_test_event::TestObject"
                        }
                      }
                    }
                  }
                }
              ]
            }
          }
        }
      }
    }
  }
}
