crates/rtd-indexer-alt-e2e-tests/tests/graphql_subscription/snapshots/graphql_subscription__event_subscription__event_subscription_previous_transaction.snap
---
source: crates/rtd-indexer-alt-e2e-tests/tests/graphql_subscription/event_subscription.rs
assertion_line: 925
expression: live_node
---
{
  "transaction": {
    "digest": "[digest]",
    "effects": {
      "objectChanges": {
        "nodes": [
          {
            "inputState": {
              "asMoveObject": {
                "contents": {
                  "type": {
                    "repr": "[pkg]::coin::Coin<0x0000000000000000000000000000000000000000000000000000000000000002::rtd::RTD>"
                  }
                }
              },
              "previousTransaction": {
                "digest": "[digest]",
                "sender": null,
                "kind": {
                  "__typename": "GenesisTransaction"
                }
              }
            },
            "outputState": {
              "asMoveObject": {
                "contents": {
                  "type": {
                    "repr": "[pkg]::coin::Coin<0x0000000000000000000000000000000000000000000000000000000000000002::rtd::RTD>"
                  }
                }
              },
              "previousTransaction": {
                "digest": "[digest]",
                "sender": {
                  "address": "[address]"
                },
                "kind": {
                  "__typename": "ProgrammableTransaction"
                },
                "effects": {
                  "objectChanges": {
                    "nodes": [
                      {
                        "inputState": {
                          "asMoveObject": {
                            "contents": {
                              "type": {
                                "repr": "[pkg]::coin::Coin<0x0000000000000000000000000000000000000000000000000000000000000002::rtd::RTD>"
                              }
                            }
                          }
                        }
                      },
                      {
                        "inputState": {
                          "asMoveObject": {
                            "contents": {
                              "type": {
                                "repr": "[pkg]::emit_test_event::TestObject"
                              }
                            }
                          }
                        }
                      }
                    ]
                  }
                }
              }
            }
          },
          {
            "inputState": {
              "asMoveObject": {
                "contents": {
                  "type": {
                    "repr": "[pkg]::emit_test_event::TestObject"
                  }
                }
              },
              "previousTransaction": {
                "digest": "[digest]",
                "sender": {
                  "address": "[address]"
                },
                "kind": {
                  "__typename": "ProgrammableTransaction"
                }
              }
            },
            "outputState": {
              "asMoveObject": {
                "contents": {
                  "type": {
                    "repr": "[pkg]::emit_test_event::TestObject"
                  }
                }
              },
              "previousTransaction": {
                "digest": "[digest]",
                "sender": {
                  "address": "[address]"
                },
                "kind": {
                  "__typename": "ProgrammableTransaction"
                },
                "effects": {
                  "objectChanges": {
                    "nodes": [
                      {
                        "inputState": {
                          "asMoveObject": {
                            "contents": {
                              "type": {
                                "repr": "[pkg]::coin::Coin<0x0000000000000000000000000000000000000000000000000000000000000002::rtd::RTD>"
                              }
                            }
                          }
                        }
                      },
                      {
                        "inputState": {
                          "asMoveObject": {
                            "contents": {
                              "type": {
                                "repr": "[pkg]::emit_test_event::TestObject"
                              }
                            }
                          }
                        }
                      }
                    ]
                  }
                }
              }
            }
          }
        ]
      }
    }
  }
}
